--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,3 +7,4 @@ junit5 = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "j
 assertj = { group = "org.assertj", name = "assertj-core", version.ref = "assertj" }
 
 [plugins]
+nebula-release = { id = "nebula.release", version = "17.2.2" }
